Test jdk25